--- a/package.json
+++ b/package.json
@@ -1,11 +1,13 @@
 {
   "name": "firenza",
   "scripts": {
-    "build": "node build"
+    "build": "node build && esbuild src/index.ts --bundle --minify --loader:.html=text --outfile=dist/worker.mjs"
   },
   "devDependencies": {
     "@cloudflare/workers-types": "^3.2.0",
+    "esbuild": "^0.14.3",
     "html-minifier": "^4.0.0",
+    "typescript": "^4.5.3",
     "wrangler": "^0.0.0-beta.6"
   }
 }
