--- a/tsconfig.json
+++ b/tsconfig.json
@@ -2,7 +2,10 @@
   "compilerOptions": {
     "target": "ES2020",
     "module": "ES2020",
-    "lib": ["ES2020"]
+    "lib": ["ES2020"],
+    "noEmit": true,
+    "types": [],
+    "moduleResolution": "node"
   },
-  "include": ["src/**/*.ts"]
+  "include": ["src"]
 }
