--- a/wrangler.toml
+++ b/wrangler.toml
@@ -11,9 +11,4 @@ port = 80
 
 [build.upload]
 format = "modules"
-dir = "src"
-main = "index.ts"
-
-[[build.upload.rules]]
-type = "Text"
-globs = ["**/*.html"]
+main = "worker.mjs"
