--- a/package.json
+++ b/package.json
@@ -1,13 +1,18 @@
 {
   "name": "firenza",
   "scripts": {
-    "build": "node build && esbuild src/index.ts --bundle --minify --loader:.html=text --outfile=dist/worker.mjs"
+    "build": "node build && esbuild src/index.ts --bundle --loader:.html=text --format=esm --target=es2020 --outfile=dist/worker.mjs"
   },
   "devDependencies": {
     "@cloudflare/workers-types": "^3.2.0",
+    "ava": "^3.15.0",
     "esbuild": "^0.14.3",
     "html-minifier": "^4.0.0",
+    "miniflare": "^1.4.1",
     "typescript": "^4.5.3",
     "wrangler": "^0.0.0-beta.6"
+  },
+  "dependencies": {
+    "mime": "^3.0.0"
   }
 }
