add github actions and rename html folder

--- a/package.json
+++ b/package.json
@@ -1,7 +1,9 @@
 {
   "name": "firenza",
   "scripts": {
-    "build": "node build && esbuild src/index.ts --bundle --loader:.html=text --format=esm --target=es2020 --outfile=dist/worker.mjs"
+    "build:html": "node build",
+    "build:mjs": "esbuild src/index.ts --bundle --loader:.html=text --minify --sourcemap --format=esm --target=es2020 --outfile=dist/worker.mjs",
+    "build": "yarn build:html && yarn build:mjs"
   },
   "devDependencies": {
     "@cloudflare/workers-types": "^3.2.0",
