--- a/.github/workflows/btd.yaml
+++ b/.github/workflows/btd.yaml
@@ -7,6 +7,7 @@ jobs:
       - name: Install dependencies
         uses: actions/checkout@v2
       - name: Install and Set Up Node
+        uses: actions/setup-node@v2
         with:
           node-version: 16.13.1
           cache: "yarn"
