--- a/.github/workflows/btd.yaml
+++ b/.github/workflows/btd.yaml
@@ -26,7 +26,7 @@ jobs:
           B2APIKEY: ${{ secrets.B2APIKEY }}
           B2URL:  ${{ secrets.B2URL }}
           BUCKET_NAME: ${{ secrets.BUCKET_NAME }}
-        run: yarn miniflare
+        run: yarn ava
       - name: Deploy Workers
         uses: cloudflare/wrangler-action@1.3.0
         with:
