improve readability, add headers, remove sourcemap and ava config

--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "license": "GPLv3",
   "scripts": {
     "build:html": "node build",
-    "build:mjs": "esbuild src/index.ts --bundle --loader:.html=text --minify --sourcemap --format=esm --target=es2020 --outfile=dist/worker.mjs",
+    "build:mjs": "esbuild src/index.ts --bundle --loader:.html=text --minify --format=esm --target=es2020 --outfile=dist/worker.mjs",
     "build": "yarn build:html && yarn build:mjs"
   },
   "devDependencies": {
